--- a/_data/forms/config-standard.yml
+++ b/_data/forms/config-standard.yml
@@ -4,35 +4,35 @@ id: standard
 
 formGroups:
   - preset: selectStandard
-  - widget: string-i18n
-    title: name
-    param: {rule: alphanum-space}
   - preset: description
+  - preset: tags
+  - widget: string-i18n
+    title: standardOrg
   - widget: string-i18n
     title: specURL
     param: {type: url}
-  - widget: string-i18n
-    title: standardOrg
-  - preset: tags
   - preset: hr
   - preset: empty
     title: administrations
     param: {start: true}
   - preset: adminCode
+  - preset: team
+  - preset: contact
+    param: {phone: false}
+  - preset: dates
+    param: {created: true}
   - widget: group
     title: reference
     param: {more: true}
     fields:
       - widget: string-i18n
-        title: URL
-        param: {type: url}
-      - widget: string-i18n
         title: name
         param: {rule: names}
-  - preset: dates
-    param: {created: true}
-  - widget: string
+      - widget: string-i18n
+        title: URL
+        param: {type: url}
+  - widget: select
     title: status
-  - preset: contact
-    param: {phone: false}
+    param:
+      options: {deprecated, mandatory, preferred}
   - preset: empty
