--- a/_data/standard/html5.yml
+++ b/_data/standard/html5.yml
@@ -37,4 +37,4 @@ administrations:
         name:
           en: Standard on Web Interoperability
           fr: Norme sur l'interopérabilité du Web
-    status: mandatory-gc
+    status: mandatory
