--- a/_data/forms/config-software.yml
+++ b/_data/forms/config-software.yml
@@ -14,6 +14,7 @@ formGroups:
     title: administrations
     param: {start: true}
   - preset: adminCode
+  - preset: team
   - preset: empty
     title: uses
     param: {start: true}
