update categoty field in software-mandatory.yml file

--- a/_data_templates/software_mandatory.yml
+++ b/_data_templates/software_mandatory.yml
@@ -4,6 +4,7 @@ description:
   whatItDoes:
     en: Lorem ipsum dolor sit amet, consectetur adipiscing elit.
     fr: Quisque bibendum ante ligula, porta vestibulum enim egestas vel.
+Category: '1234567'
 homepageURL:
   en: 'https://example.com/'
   fr: 'https://example.com/'
