--- a/_data/software/lesk.yml
+++ b/_data/software/lesk.yml
@@ -1,14 +1,16 @@
 ---
 schemaVersion: '1.0'
 description:
-  en: >-
-    Laravel Enterprise Starter Kit, is a template project based on the Laravel
-    framework, combining a set of features that can kick start any Web
-    application.
-  fr: >-
-    Laravel Enterprise Starter Kit, est un projet de modèle basé sur le
-    framework Laravel, combinant un ensemble de fonctionnalités qui peuvent
-    démarrer n'importe quelle application Web.
+  whatItDoes:
+    en: >-
+      Laravel Enterprise Starter Kit, is a template project based on the Laravel
+      framework, combining a set of features that can kick start any Web
+      application.
+    fr: >-
+      Laravel Enterprise Starter Kit, est un projet de modèle basé sur le
+      framework Laravel, combinant un ensemble de fonctionnalités qui peuvent
+      démarrer n'importe quelle application Web.
+category: '43232400'
 homepageURL:
   en: 'https://lesk.it'
   fr: 'https://lesk.it'
