--- a/_data/software/notepad-plus-plus.yml
+++ b/_data/software/notepad-plus-plus.yml
@@ -1,10 +1,13 @@
 ---
 schemaVersion: '1.0'
 description:
-  en: Text editor and Notepad replacement that runs in the Windows environment.
-  fr: >-
-    Éditeur de textes et remplacement pour Notepad qui fonctionne dans
-    l'environement Windows.
+  whatItDoes:
+    en: >-
+      Text editor and Notepad replacement that runs in the Windows environment.
+    fr: >-
+      Éditeur de textes et remplacement pour Notepad qui fonctionne dans
+      l'environement Windows.
+category: '43232100'
 homepageURL:
   en: 'https://notepad-plus-plus.org'
   fr: 'https://notepad-plus-plus.org/fr'
