--- a/_data/software/debezium.yml
+++ b/_data/software/debezium.yml
@@ -1,10 +1,13 @@
 ---
 schemaVersion: '1.0'
 description:
-  en: Debezium is an open source distributed platform for change data capture.
-  fr: >-
-    Debezium est une platforme distribuée d'une ressource ouverte pour la
-    capture de données modifiées.
+  whatItDoes:
+    en: >-
+      Debezium is an open source distributed platform for change data capture.
+    fr: >-
+      Debezium est une platforme distribuée d'une ressource ouverte pour la
+      capture de données modifiées.
+category: '43232300'
 homepageURL:
   en: 'https://debezium.io/'
   fr: 'https://debezium.io/'
