--- a/_data/software/firefox.yml
+++ b/_data/software/firefox.yml
@@ -1,8 +1,12 @@
 ---
 schemaVersion: '1.0'
 description:
-  en: Web browser developed by Mozilla Foundation
-  fr: Navigateur Web développé par la Fondation Mozilla
+  whatItDoes:
+    en: >-
+      Web browser developed by Mozilla Foundation.
+    fr: >-
+      Navigateur Web développé par la Fondation Mozilla.
+category: '43232100'
 homepageURL:
   en: 'https://www.mozilla.org/en-US/firefox/'
   fr: 'https://www.mozilla.org/fr/firefox/'
