--- a/_data/software/linux.yml
+++ b/_data/software/linux.yml
@@ -1,8 +1,12 @@
 ---
 schemaVersion: '1.0'
 description:
-  en: The Linux kernel is a Unix-like computer operating system kernel
-  fr: Le noyau Linux est un noyau de système d'exploitation de type UNIX
+  whatItDoes:
+    en: >-
+      The Linux kernel is a Unix-like computer operating system kernel.
+    fr: >-
+      Le noyau Linux est un noyau de système d'exploitation de type UNIX.
+category: '43233000'
 homepageURL:
   en: 'https://www.linux.org'
   fr: 'https://www.linux.org'
