--- a/_data/software/rocketchat.yml
+++ b/_data/software/rocketchat.yml
@@ -2,10 +2,8 @@
 schemaVersion: '1.0'
 description:
   whatItDoes:
-    en: >-
-      Instant messaging team chat.
-    fr: >-
-      Messagerie instantanée et clavardage d'équipe.
+    en: Instant messaging team chat.
+    fr: Messagerie instantanée et clavardage d'équipe.
 category: '43233500'
 homepageURL:
   en: 'https://rocket.chat'
