--- a/_data/software/apache.yml
+++ b/_data/software/apache.yml
@@ -2,10 +2,8 @@
 schemaVersion: '1.0'
 description:
   whatItDoes:
-    en: >-
-      Cross-platform web server.
-    fr: >-
-     Serveur Web multiplateforme.
+    en: Cross-platform web server.
+    fr: Serveur Web multiplateforme.
 category: '43232700'
 homepageURL:
   en: 'https://httpd.apache.org'
