--- a/_data/software/jekyll.yml
+++ b/_data/software/jekyll.yml
@@ -2,10 +2,8 @@
 schemaVersion: '1.0'
 description:
   whatItDoes:
-    en: >-
-      Transform your plain text into static websites and blogs.
-    fr: >-
-      Transformez votre texte brut en sites Web et blogs statiques.
+    en: Transform your plain text into static websites and blogs.
+    fr: Transformez votre texte brut en sites Web et blogs statiques.
 category: '43232400'
 homepageURL:
   en: 'https://jekyllrb.com/'
