Update licences data

--- a/_data/code/federal/eccc.yml
+++ b/_data/code/federal/eccc.yml
@@ -23,7 +23,7 @@ releases:
       - URL:
           en: 'https://framagit.org/metroprojects/metro/blob/master/LICENSE'
           fr: 'https://framagit.org/metroprojects/metro/blob/master/LICENSE'
-        spdxID: GPL-2.0
+        spdxID: GPL-2.0-only
     repositoryURL:
       en: 'https://framagit.org/metroprojects/metro'
       fr: 'https://framagit.org/metroprojects/metro'
