--- a/_data/software/mediawiki.yml
+++ b/_data/software/mediawiki.yml
@@ -12,7 +12,7 @@ licences:
   - URL:
       en: 'https://www.mediawiki.org/wiki/Topic:Tg9b5hes4ue3vdix'
       fr: 'https://www.mediawiki.org/wiki/Topic:Tg9b5hes4ue3vdix'
-    spdxID: GPL-2.0
+    spdxID: GPL-2.0-only
 name:
   en: MediaWiki
   fr: MediaWiki
