--- a/_data/code/federal/nrc-cnrc.yml
+++ b/_data/code/federal/nrc-cnrc.yml
@@ -23,7 +23,7 @@ releases:
       - URL:
           en: 'https://github.com/nrc-cnrc/EGSnrc/blob/master/LICENCE'
           fr: 'https://github.com/nrc-cnrc/EGSnrc/blob/master/LICENCE'
-        spdxID: AGPL-3.0
+        spdxID: AGPL-3.0-only
     repositoryURL:
       en: 'https://github.com/nrc-cnrc/EGSnrc'
       fr: 'https://github.com/nrc-cnrc/EGSnrc'
