--- a/_data/software/elgg.yml
+++ b/_data/software/elgg.yml
@@ -18,7 +18,7 @@ licences:
   - URL:
       en: 'http://learn.elgg.org/en/2.0/intro/license.html'
       fr: 'http://learn.elgg.org/en/2.0/intro/license.html'
-    spdxID: GPL-2.0
+    spdxID: GPL-2.0-only
 name:
   en: Elgg
   fr: Elgg
