--- a/_data/software/qgis.yml
+++ b/_data/software/qgis.yml
@@ -12,7 +12,7 @@ licences:
   - URL:
       en: 'https://github.com/qgis/QGIS/blob/master/COPYING'
       fr: 'https://github.com/qgis/QGIS/blob/master/COPYING'
-    spdxID: GPL-2.0
+    spdxID: GPL-2.0-only
 name:
   en: QGIS
   fr: QGIS
