--- a/_data/software/accumulo.yml
+++ b/_data/software/accumulo.yml
@@ -39,3 +39,11 @@ administrations:
         name:
           en: Software Database Management Systems.
           fr: Logiciels de systèmes de gestion de base de données.
+  - adminCode: test-test-test-bc
+    uses:
+      - contact:
+          email: test@gmail.com
+          name: imade
+        date:
+          started: '2019-08-05'
+          metadataLastUpdated: '2019-08-14'
