--- a/_data/administrations/municipal.yml
+++ b/_data/administrations/municipal.yml
@@ -14,3 +14,8 @@
   name:
     en: City of Edmonton
     fr: Ville d'Edmonton
+- code: test-test-mb
+  name:
+    en: TEST TEST
+    fr: TEST TEST
+  provinceCode: mb
