Corrections in data format

--- a/_data/software/airbnb-knowledge-repo.yml
+++ b/_data/software/airbnb-knowledge-repo.yml
@@ -2,8 +2,7 @@
 schemaVersion: '1.0'
 description:
   whatItDoes:
-    en: >-
-      A platform for data scientists and other technical professions.
+    en: A platform for data scientists and other technical professions.
     fr: >-
       Une plateforme pour les scientifiques de données et d'autres professions
       techniques.
