--- a/_data/code/federal/asc-csa.yml
+++ b/_data/code/federal/asc-csa.yml
@@ -9,8 +9,7 @@ releases:
       metadataLastUpdated: '2019-01-31'
     description:
       whatItDoes:
-        en: >-
-          The one-stop-shop solution for operating robots, satellites and beyond
+        en: 'The one-stop-shop solution for operating robots, satellites and beyond'
         fr: >-
           Un logiciel polyvalent pour faire fonctionner des robots et des
           satellites
