Updated forms javascript files and fixed UI tests errors

--- a/_data/code/municipal/city-of-edmonton-ab.yml
+++ b/_data/code/municipal/city-of-edmonton-ab.yml
@@ -1,6 +1,6 @@
 ---
 schemaVersion: '1.0'
-adminCode: edmonton_ab
+adminCode: city-of-edmonton-ab
 releases:
   - contact:
       email: jared.rewerts@edmonton.ca
