--- a/_data/software/airbnb-knowledge-repo.yml
+++ b/_data/software/airbnb-knowledge-repo.yml
@@ -24,7 +24,7 @@ tags:
   fr:
     - Partage des connaissances
 administrations:
-  - adminCode: mtl_qc
+  - adminCode: ville-de-montreal-qc
     uses:
       - contact:
           email: libre@ville.montreal.qc.ca
