--- a/_data/software/bokeh.yml
+++ b/_data/software/bokeh.yml
@@ -26,7 +26,7 @@ tags:
   fr:
     - Visualisation
 administrations:
-  - adminCode: mtl_qc
+  - adminCode: ville-de-montreal-qc
     uses:
       - contact:
           email: libre@ville.montreal.qc.ca
