--- a/_data/software/cassandra.yml
+++ b/_data/software/cassandra.yml
@@ -22,7 +22,7 @@ tags:
   fr:
     - Base de données
 administrations:
-  - adminCode: mtl_qc
+  - adminCode: ville-de-montreal-qc
     uses:
       - contact:
           email: libre@ville.montreal.qc.ca
