--- a/_data/software/elasticsearch.yml
+++ b/_data/software/elasticsearch.yml
@@ -36,7 +36,7 @@ administrations:
         date:
           started: '2019-05-06'
           metadataLastUpdated: '2019-05-13'
-  - adminCode: mtl_qc
+  - adminCode: ville-de-montreal-qc
     uses:
       - contact:
           email: libre@ville.montreal.qc.ca
