Improvement/standards form update (#660)
*  Updated standard

* Updated standards data files for schema

* Optimized js

* Standards JS

* Removed static font size in favour of percents for better responsive

* Font-size too small

* Updated software data & fixed js

* Update licences data

* Fixed reset on more-group select

--- a/_data/code/federal/ssc-spc.yml
+++ b/_data/code/federal/ssc-spc.yml
@@ -15,9 +15,6 @@ releases:
         fr: >-
           Souscrire, Annoncer, et Recursivement Re-annoncer Afin de Communiquer
           Instantanément et Ad vitam aeternam
-      howItWorks:
-        en: null
-        fr: null
     category: '43232300'
     name:
       en: MetPX-Sarracenia
@@ -26,7 +23,7 @@ releases:
       - URL:
           en: 'https://github.com/MetPX/sarracenia/blob/master/LICENSE'
           fr: 'https://github.com/MetPX/sarracenia/blob/master/LICENSE'
-        spdxID: GPL-2.0
+        spdxID: GPL-2.0-only
     repositoryURL:
       en: 'https://github.com/MetPX/sarracenia'
       fr: 'https://github.com/MetPX/sarracenia'
@@ -51,9 +48,6 @@ releases:
       whatItDoes:
         en: Enterprise architecture models
         fr: Modèles d'architecture d'entreprise
-      howItWorks:
-        en: null
-        fr: null
     category: '43232400'
     name:
       en: GC Architecture
