--- a/_data/software/bokeh.yml
+++ b/_data/software/bokeh.yml
@@ -16,7 +16,7 @@ licences:
   - URL:
       en: 'https://github.com/bokeh/bokeh/blob/master/LICENSE.txt'
       fr: 'https://github.com/bokeh/bokeh/blob/master/LICENSE.txt'
-    spdxID: BSD 3-Clause
+    spdxID: BSD-3-Clause
 name:
   en: Bokeh
   fr: Bokeh
@@ -26,7 +26,7 @@ tags:
   fr:
     - Visualisation
 administrations:
-  - adminCode: mtl_qc
+  - adminCode: ville-de-montreal-qc
     uses:
       - contact:
           email: libre@ville.montreal.qc.ca
