--- a/_data/software/notepad-plus-plus.yml
+++ b/_data/software/notepad-plus-plus.yml
@@ -2,8 +2,7 @@
 schemaVersion: '1.0'
 description:
   whatItDoes:
-    en: >-
-      Text editor and Notepad replacement that runs in the Windows environment.
+    en: Text editor and Notepad replacement that runs in the Windows environment.
     fr: >-
       Éditeur de textes et remplacement pour Notepad qui fonctionne dans
       l'environement Windows.
@@ -15,7 +14,7 @@ licences:
   - URL:
       en: 'https://notepad-plus-plus.org/news/notepad-6.1.1-gpl-enhancement.html'
       fr: 'https://notepad-plus-plus.org/news/notepad-6.1.1-gpl-enhancement.html'
-    spdxID: GPL-2.0
+    spdxID: GPL-2.0-only
 name:
   en: Notepad-plus-plus
   fr: Notepad-plus-plus
