--- a/_data/code/federal/asc-csa.yml
+++ b/_data/code/federal/asc-csa.yml
@@ -9,14 +9,10 @@ releases:
       metadataLastUpdated: '2019-01-31'
     description:
       whatItDoes:
-        en: >-
-          The one-stop-shop solution for operating robots, satellites and beyond
+        en: 'The one-stop-shop solution for operating robots, satellites and beyond'
         fr: >-
           Un logiciel polyvalent pour faire fonctionner des robots et des
           satellites
-      howItWorks:
-        en: null
-        fr: null
     category: '43232600'
     name:
       en: Apogy
