--- a/_data/code/federal/eccc.yml
+++ b/_data/code/federal/eccc.yml
@@ -15,9 +15,6 @@ releases:
         fr: >-
           Le Modèle de l'Environnement et de la Température de la Route (METRo)
           est un logiciel de prévision de la température de la route.
-      howItWorks:
-        en: null
-        fr: null
     category: '43232600'
     name:
       en: METRo
@@ -26,7 +23,7 @@ releases:
       - URL:
           en: 'https://framagit.org/metroprojects/metro/blob/master/LICENSE'
           fr: 'https://framagit.org/metroprojects/metro/blob/master/LICENSE'
-        spdxID: GPL-2.0
+        spdxID: GPL-2.0-only
     repositoryURL:
       en: 'https://framagit.org/metroprojects/metro'
       fr: 'https://framagit.org/metroprojects/metro'
