--- a/_data/code/federal/nrc-cnrc.yml
+++ b/_data/code/federal/nrc-cnrc.yml
@@ -15,9 +15,6 @@ releases:
         fr: >-
           Boîte à outils pour effectuer une simulation de Monte Carlo du
           transport du rayonnement ionisant à travers la matière
-      howItWorks:
-        en: null
-        fr: null
     category: '43232600'
     name:
       en: EGSnrc
@@ -26,7 +23,7 @@ releases:
       - URL:
           en: 'https://github.com/nrc-cnrc/EGSnrc/blob/master/LICENCE'
           fr: 'https://github.com/nrc-cnrc/EGSnrc/blob/master/LICENCE'
-        spdxID: AGPL-3.0
+        spdxID: AGPL-3.0-only
     repositoryURL:
       en: 'https://github.com/nrc-cnrc/EGSnrc'
       fr: 'https://github.com/nrc-cnrc/EGSnrc'
