--- a/_data/code/provincial/ab.yml
+++ b/_data/code/provincial/ab.yml
@@ -11,9 +11,6 @@ releases:
       whatItDoes:
         en: Dataset scheming extension used on open.alberta.ca
         fr: Extension du schéma de données utilisée dans open.alberta.ca
-      howItWorks:
-        en: null
-        fr: null
     category: '43232300'
     name:
       en: ckanext-ab_scheming
@@ -22,7 +19,7 @@ releases:
       - URL:
           en: 'https://github.com/abgov/ckanext-ab_scheming/blob/master/LICENSE'
           fr: 'https://github.com/abgov/ckanext-ab_scheming/blob/master/LICENSE'
-        spdxID: AGPL-3.0
+        spdxID: AGPL-3.0-only
     repositoryURL:
       en: 'https://github.com/abgov/ckanext-ab_scheming'
       fr: 'https://github.com/abgov/ckanext-ab_scheming'
@@ -43,9 +40,6 @@ releases:
       whatItDoes:
         en: Ckan extension developed for use on open.alberta.ca
         fr: Extension Ckan développée pour être utilisée dans open.alberta.ca
-      howItWorks:
-        en: null
-        fr: null
     category: '43232300'
     name:
       en: ckanext-open_alberta
@@ -54,7 +48,7 @@ releases:
       - URL:
           en: 'https://github.com/abgov/ckanext-open_alberta/blob/master/LICENSE'
           fr: 'https://github.com/abgov/ckanext-open_alberta/blob/master/LICENSE'
-        spdxID: AGPL-3.0
+        spdxID: AGPL-3.0-only
     repositoryURL:
       en: 'https://github.com/abgov/ckanext-open_alberta'
       fr: 'https://github.com/abgov/ckanext-open_alberta'
@@ -75,9 +69,6 @@ releases:
       whatItDoes:
         en: Ckan Geo Map Viewer Extension
         fr: Extension Ckan de la carte géographique
-      howItWorks:
-        en: null
-        fr: null
     category: '43233500'
     name:
       en: ckanext-geomapviewer
@@ -86,7 +77,7 @@ releases:
       - URL:
           en: 'https://github.com/abgov/ckanext-geomapviewer/blob/master/LICENSE'
           fr: 'https://github.com/abgov/ckanext-geomapviewer/blob/master/LICENSE'
-        spdxID: AGPL-3.0
+        spdxID: AGPL-3.0-only
     repositoryURL:
       en: 'https://github.com/abgov/ckanext-geomapviewer'
       fr: 'https://github.com/abgov/ckanext-geomapviewer'
