--- a/_data/software/airbnb-knowledge-repo.yml
+++ b/_data/software/airbnb-knowledge-repo.yml
@@ -2,8 +2,7 @@
 schemaVersion: '1.0'
 description:
   whatItDoes:
-    en: >-
-      A platform for data scientists and other technical professions.
+    en: A platform for data scientists and other technical professions.
     fr: >-
       Une plateforme pour les scientifiques de données et d'autres professions
       techniques.
@@ -25,7 +24,7 @@ tags:
   fr:
     - Partage des connaissances
 administrations:
-  - adminCode: mtl_qc
+  - adminCode: ville-de-montreal-qc
     uses:
       - contact:
           email: libre@ville.montreal.qc.ca
