--- a/_data/software/debezium.yml
+++ b/_data/software/debezium.yml
@@ -2,8 +2,7 @@
 schemaVersion: '1.0'
 description:
   whatItDoes:
-    en: >-
-      Debezium is an open source distributed platform for change data capture.
+    en: Debezium is an open source distributed platform for change data capture.
     fr: >-
       Debezium est une platforme distribuée d'une ressource ouverte pour la
       capture de données modifiées.
@@ -25,7 +24,7 @@ tags:
   fr:
     - Gestion incrementale des données
 administrations:
-  - adminCode: mtl_qc
+  - adminCode: ville-de-montreal-qc
     uses:
       - contact:
           email: libre@ville.montreal.qc.ca
