--- a/_data/software/mediawiki.yml
+++ b/_data/software/mediawiki.yml
@@ -2,10 +2,8 @@
 schemaVersion: '1.0'
 description:
   whatItDoes:
-    en: >-
-      Wiki package written in PHP, originally for use on Wikipedia.
-    fr: >-
-      Ensemble Wiki développé à l'origine pour Wikipédia.
+    en: Wiki package written in PHP, originally for use on Wikipedia.
+    fr: Ensemble Wiki développé à l'origine pour Wikipédia.
 category: '43232100'
 homepageURL:
   en: 'https://www.mediawiki.org/wiki/MediaWiki'
@@ -14,7 +12,7 @@ licences:
   - URL:
       en: 'https://www.mediawiki.org/wiki/Topic:Tg9b5hes4ue3vdix'
       fr: 'https://www.mediawiki.org/wiki/Topic:Tg9b5hes4ue3vdix'
-    spdxID: GPL-2.0
+    spdxID: GPL-2.0-only
 name:
   en: MediaWiki
   fr: MediaWiki
