--- a/_data/standard/utf-8.yml
+++ b/_data/standard/utf-8.yml
@@ -1,14 +1,15 @@
 ---
 schemaVersion: '1.0'
 description:
-  en: >-
-    UTF-8 is a variable width character encoding capable of encoding all valid
-    code points in Unicode using one to four 8-bit bytes. The encoding is
-    defined by the Unicode standard.
-  fr: >-
-    UTF-8 est un codage de caractères de largeur variable capable de coder tous
-    les points de code valides en Unicode en utilisant un à quatre octets de 8
-    bits. Le codage est défini par la norme Unicode.
+  whatItDoes:
+    en: >-
+      UTF-8 is a variable width character encoding capable of encoding all valid
+      code points in Unicode using one to four 8-bit bytes. The encoding is
+      defined by the Unicode standard.
+    fr: >-
+      UTF-8 est un codage de caractères de largeur variable capable de coder
+      tous les points de code valides en Unicode en utilisant un à quatre octets
+      de 8 bits. Le codage est défini par la norme Unicode.
 name:
   en: Unicode Transformation Format 8
   fr: Unicode Transformation Format 8
@@ -40,7 +41,7 @@ administrations:
         name:
           en: Standard on Web Interoperability
           fr: Norme sur l'interopérabilité du Web
-    status: mandatory-gc
+    status: mandatory
   - adminCode: lac-bac
     contact:
       email: null
@@ -60,4 +61,4 @@ administrations:
           fr: >-
             Lignes directrices sur les formats de fichier à utiliser pour
             transférer des ressources documentaires
-    status: preferred-gc
+    status: preferred
