🤖 Committed by bibi@montreal.ca

--- a/_data/administrations/aboriginal.yml
+++ b/_data/administrations/aboriginal.yml
@@ -3,3 +3,8 @@
   name:
     en: Test (please remove)
     fr: Test (please remove)
+- code: whacka-whacka-qc
+  name:
+    en: Whacka Whacka
+    fr: Whacka Whacka
+  provinceCode: qc
