--- a/_data/software/debezium.yml
+++ b/_data/software/debezium.yml
@@ -24,7 +24,7 @@ tags:
   fr:
     - Gestion incrementale des données
 administrations:
-  - adminCode: ville-de-montreal-qc
+  - adminCode: city-of-montreal-qc
     uses:
       - contact:
           email: libre@ville.montreal.qc.ca
