--- a/_data/administrations/others.yml
+++ b/_data/administrations/others.yml
@@ -1,5 +1,5 @@
 ---
-- code: ~
+- code: Test (please remove)
   name:
-    en: ~
-    fr: ~
+    en: Test (please remove)
+    fr: Test (please remove)
