--- a/_data/administrations/aboriginal.yml
+++ b/_data/administrations/aboriginal.yml
@@ -1,5 +1,5 @@
 ---
-- code: Test (please remove)
+- code: test (please remove)
   name:
     en: Test (please remove)
     fr: Test (please remove)
