Baseline for future project pages & templates

--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site settings
 baseurl: "/ore-ero"
 url: "https://canada-ca.github.io/ore-ero"
-github_username: canada-ca
+github_username: fredericlestage-vdm
 github_repository: ore-ero
-prbot_url: "https://canada-pr-bot.herokuapp.com/"
+prbot_url: "http://localhost:3000"
 
 wet_cdts_hosturl: "https://www.canada.ca/etc/designs/canada/cdts/gcweb"
 wet_cdts_version: "v4_0_30"
